Fix big image width on small screens * Remove width on PurchasePlan

--- a/src/index.css
+++ b/src/index.css
@@ -276,6 +276,10 @@ footer {
 		border-radius: 0;
 	}
 
+	.product-img {
+		width: 100%;
+	}
+
 	.product-page,
 	.product-images-column,
 	.product-details-column {
